[project]
name = "agentic-ai-with-google-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.3",
    "langgraph-prebuilt>=0.1.8",
    "langgraph>=0.3.30",
    "streamlit>=1.44.1",
    "duckduckgo-search>=8.0.1",
    "langchain-community>=0.3.21",
    "python-dotenv>=1.1.0",
]
