[project]
name = "agentic-ai-with-google-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.3",
    "langgraph-prebuilt>=0.1.8",
    "langgraph>=0.3.30",
    "streamlit>=1.44.1",
    "duckduckgo-search>=8.0.1",
    "langchain-community>=0.3.21",
    "python-dotenv>=1.1.0",
    "unstructured[all-docs]>=0.17.2",
    "langchain-text-splitters>=0.3.8",
    "sqlite-vec>=0.1.6",
    "transformers>=4.51.3",
    "sentence-transformers>=4.1.0",
    "langchain-huggingface>=0.1.2",
    "langchain-unstructured>=0.1.6",
    "hf-xet>=1.0.3",
    "ollama>=0.4.8",
    "langchain-ollama>=0.3.2",
    "notebook>=7.4.0",
]
